--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@reduxjs/toolkit": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
@@ -40,6 +41,3 @@
     "webpack-dev-server": "^4.7.3"
   }
 }
-
-
-
